# AlexIndustrialJepa

./: .env.example  .gitignore  EVALUATION.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: ml-researcher.md  ml_researcher.md  neurips-reviewer.md  paper-writer.md
TabPFN/: README.md
TabPFN/docs/: EXPERIMENT_PLAN.md
alex-contribution/: COMPETITORS.md  DECISIONS.md  OPEN_QUESTIONS.md  PAPERS.md  PLAN.md  smoke_test.py
autoresearch/: AUTORESEARCH_PROMPT.md  CONTINUE_PROMPT.md  CROSS_MACHINE_RESEARCH.md  EXECUTIVE_SUMMARY.md  EXPERIMENT_LOG.md  LESSONS_LEARNED.md  MANY_TO_ONE_PROMPT.md  MULTI_SOURCE_DATASETS.md  NEXT_STEPS.md  OBJECTIVES_STATUS.md  VALIDATION_RADICAL.md  benchmarks.py  experiment_log.txt  mechanical_jepa_program.md  prepare.py  program.md  run.py  start_overnight.sh  train.py
configs/: base.yaml
dcssl-replication/: EXPERIMENT_LOG.md  analyze_results.py  compile_results.py  models.py  run_all_experiments.py  run_experiments.py  train_utils.py
docs/: SOTA_PLAN.md
mechanical-datasets/: FINAL_REPORT.md  OVERNIGHT_PROMPT.md  OVERNIGHT_TASK.md  README.md  TASK_SUMMARY.md  cwru_exploration.json  download_cwru_sample.py  explore_cwru.py  process_cwru_to_unified.py  test_hf_dataset.py  upload_to_huggingface.py  validate_dataset.py
mechanical-jepa/: CONSOLIDATED_RESULTS.md  README.md  analyze_results.py  run_experiments.py  train.py  train_transfer.py  transfer_eval.py  update_multisource_fig.py
paper/: EXECUTION_PLAN.md
paper-neurips/: paper.tex  references.bib  review_history.md
paper-replications/: README.md
scripts/: chronos_experiments.py  cross_machine_transfer.py  cross_task_transfer.py  test_voraus.py  train_temporal_aursad.py  train_world_model.py
unify/: 01_benchmark_toolkit.ipynb
(+238 files in other folders)
